--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- favicon  -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/fav_icon/favicon.png" type="image/x-icon" />
 
-    <title>Document</title>
+    <title>Second Assignment</title>
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body></body>
