--- a/index.html
+++ b/index.html
@@ -5,10 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- favicon  -->
-    <link rel="shortcut icon" href="images/fav_icon/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="#" type="image/x-icon" />
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/cdac01df3a.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- google font  -->
 
     <title>Second Assignment</title>
     <link rel="stylesheet" href="style/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <!-- header  -->
+      <nav>
+        <h2 class="nav-title">G3 Architects</h2>
+        <ul class="nav-list">
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact Us</li>
+          <li>Login</li>
+        </ul>
+      </nav>
+      <!-- banner -->
+      <div class="banner-info">
+        <h1 class="banner-tittle">Brand New Group of Architects</h1>
+        <p class="banner-description">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even
+        </p>
+        <button class="primary-btn">Explore More</button>
+      </div>
+      <div class="banner-thumbnail">
+        <img src="images/banner.png" alt="" />
+      </div>
+    </header>
+  </body>
 </html>
