--- a/index.html
+++ b/index.html
@@ -43,5 +43,38 @@
         <img src="images/banner.png" alt="" />
       </div>
     </header>
+    <!-- ----- Quick Features  -----  -->
+    <main>
+      <section class="quick-feature-container">
+        <div class="quick-features">
+          <div class="quick-features-teams">
+            <article class="quick-features-team">
+              <img src="images/team1.png" alt="" />
+            </article>
+            <article class="quick-features-team">
+              <img src="images/team2.png" alt="" />
+            </article>
+            <article class="quick-features-team">
+              <img src="images/team3.png" alt="" />
+            </article>
+            <article class="quick-features-team">
+              <img src="images/team4.png" alt="" />
+            </article>
+          </div>
+          <div class="quick-feature-info">
+            <h1 class="quick-feature-title">
+              <span class="title-part1">Quick list</span> of Our
+              <span class="title-part2">Features</span>
+            </h1>
+            <p class="quick-feature-description">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, words which don't look even
+            </p>
+            <button class="primary-btn">Explore More</button>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
