--- a/index.html
+++ b/index.html
@@ -75,6 +75,60 @@
           </div>
         </div>
       </section>
+      <!-- feature  -->
+      <section class="feature">
+        <div class="feature-info">
+          <div class="inner-info">
+            <h2 class="feature-info-title">Features you will love & enjoy</h2>
+            <p class="feature-info-description" class="featue-description">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+            </p>
+            <article>
+              <h3 class="inner-info-feature-title">Dexktop & Mobile Version</h3>
+              <p class="inner-info-feature-description">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </article>
+            <article>
+              <h3 class="inner-info-feature-title">Drag & Drop Builder</h3>
+              <p class="inner-info-feature-description">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </article>
+            <article>
+              <h3 class="inner-info-feature-title">Awesome Modern Design</h3>
+              <p class="inner-info-feature-description">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </article>
+            <article>
+              <h3 class="inner-info-feature-title">Super Easy to Edit</h3>
+              <p class="inner-info-feature-description">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </article>
+          </div>
+          <div class="feature-thumbnail">
+            <div class="feature-button">
+              <h3 class="feature-button-title">10+Year</h3>
+              <p class="feature-button-exprience">Experience</p>
+            </div>
+            <!-- <button class="primary-btn feature-button">
+              10+Year Experience
+            </button> -->
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
