Some Facts div create

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header class="header">
       <!-- header  -->
-      <nav>
+      <nav class="container">
         <h2 class="nav-title">G3 Architects</h2>
         <ul class="nav-list">
           <li>Home</li>
@@ -32,20 +32,20 @@
       <!-- banner -->
       <div class="banner-info">
         <h1 class="banner-tittle">Brand New Group of Architects</h1>
-        <p class="banner-description">
+        <p class="primary-description">
           There are many variations of passages of Lorem Ipsum available, but
           the majority have suffered alteration in some form, by injected
           humour, or randomised words which don't look even
         </p>
         <button class="primary-btn">Explore More</button>
       </div>
-      <div class="banner-thumbnail">
+      <div class="banner-thumbnail container">
         <img src="images/banner.png" alt="" />
       </div>
     </header>
     <!-- ----- Quick Features  -----  -->
     <main>
-      <section class="quick-feature-container">
+      <section class="quick-feature container">
         <div class="quick-features">
           <div class="quick-features-teams">
             <article class="quick-features-team">
@@ -66,7 +66,7 @@
               <span class="title-part1">Quick list</span> of Our
               <span class="title-part2">Features</span>
             </h1>
-            <p class="quick-feature-description">
+            <p class="primary-description">
               There are many variations of passages of Lorem Ipsum available,
               but the majority have suffered alteration in some form, by
               injected humour, words which don't look even
@@ -76,18 +76,18 @@
         </div>
       </section>
       <!-- feature  -->
-      <section class="feature">
+      <section class="feature container">
         <div class="feature-info">
           <div class="inner-info">
             <h2 class="feature-info-title">Features you will love & enjoy</h2>
-            <p class="feature-info-description" class="featue-description">
+            <p class="primary-description">
               There are many variations of passages of Lorem Ipsum available,
               but the majority have suffered alteration in some form, by
               injected humour, or randomised words which don't look even
             </p>
             <article>
               <h3 class="inner-info-feature-title">Dexktop & Mobile Version</h3>
-              <p class="inner-info-feature-description">
+              <p class="primary-description">
                 There are many variations of passages of Lorem Ipsum available,
                 but the majority have suffered alteration in some form, by
                 injected humour, or randomised...........
@@ -95,7 +95,7 @@
             </article>
             <article>
               <h3 class="inner-info-feature-title">Drag & Drop Builder</h3>
-              <p class="inner-info-feature-description">
+              <p class="primary-description">
                 There are many variations of passages of Lorem Ipsum available,
                 but the majority have suffered alteration in some form, by
                 injected humour, or randomised...........
@@ -103,7 +103,7 @@
             </article>
             <article>
               <h3 class="inner-info-feature-title">Awesome Modern Design</h3>
-              <p class="inner-info-feature-description">
+              <p class="primary-description">
                 There are many variations of passages of Lorem Ipsum available,
                 but the majority have suffered alteration in some form, by
                 injected humour, or randomised...........
@@ -111,7 +111,7 @@
             </article>
             <article>
               <h3 class="inner-info-feature-title">Super Easy to Edit</h3>
-              <p class="inner-info-feature-description">
+              <p class="primary-description">
                 There are many variations of passages of Lorem Ipsum available,
                 but the majority have suffered alteration in some form, by
                 injected humour, or randomised...........
@@ -129,6 +129,67 @@
           </div>
         </div>
       </section>
+      <!-- Facts -->
+      <section class="fact container">
+        <div class="fact-info">
+          <h2 class="primary-title">Some Facts</h2>
+          <p class="primary-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="awards">
+          <article class="award">
+            <img src="images/icons/ribon.png" alt="" />
+            <h1>54</h1>
+            <h3>Awards Winnings</h3>
+          </article>
+          <article class="award">
+            <img src="images/icons/ribon.png" alt="" />
+            <h1>54</h1>
+            <h3>Awards Winnings</h3>
+          </article>
+          <article class="award">
+            <img src="images/icons/ribon.png" alt="" />
+            <h1>54</h1>
+            <h3>Awards Winnings</h3>
+          </article>
+          <article class="award">
+            <img src="images/icons/ribon.png" alt="" />
+            <h1>54</h1>
+            <h3>Awards Winnings</h3>
+          </article>
+        </div>
+      </section>
+      <!-- Sponspors -->
+      <section class="our-Sponsors container">
+        <div class="sponsors-info">
+          <h3 class="our-sponsors-title">Our Sponsors</h3>
+          <p class="primary-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="sponsors">
+          <div class="Sponsors-thumbnail">
+            <img src="images/sponsors/figma.png" alt="" />
+          </div>
+          <div class="Sponsors-thumbnail">
+            <img src="images/sponsors/figma.png" alt="" />
+          </div>
+          <div class="Sponsors-thumbnail">
+            <img src="images/sponsors/figma.png" alt="" />
+          </div>
+          <div class="Sponsors-thumbnail">
+            <img src="images/sponsors/figma.png" alt="" />
+          </div>
+          <div class="Sponsors-thumbnail">
+            <img src="images/sponsors/figma.png" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
+
+    <div class="just-space"></div>
   </body>
 </html>
