--- a/index.html
+++ b/index.html
@@ -175,21 +175,28 @@
             <img src="images/sponsors/figma.png" alt="" />
           </div>
           <div class="Sponsors-thumbnail">
-            <img src="images/sponsors/figma.png" alt="" />
+            <img src="images/sponsors/amazon.png" alt="" />
           </div>
           <div class="Sponsors-thumbnail">
-            <img src="images/sponsors/figma.png" alt="" />
+            <img src="images/sponsors/google.png" alt="" />
           </div>
           <div class="Sponsors-thumbnail">
-            <img src="images/sponsors/figma.png" alt="" />
+            <img src="images/sponsors/telerama.png" alt="" />
           </div>
           <div class="Sponsors-thumbnail">
-            <img src="images/sponsors/figma.png" alt="" />
+            <img src="images/sponsors/spotify.png" alt="" />
           </div>
         </div>
       </section>
     </main>
 
-    <div class="just-space"></div>
+    <footer>
+      <div class="footer container">
+        <p class="footer-description">
+          All rights reserved copyright@2023 startup landing page design
+        </p>
+      </div>
+    </footer>
+
   </body>
 </html>
