--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
+    <!-- ------------------------------------
+             Header&banner
+     ------- ------------- ----------------- -->
     <header class="header">
       <!-- header  -->
       <nav class="container">
@@ -43,8 +46,11 @@
         <img src="images/banner.png" alt="" />
       </div>
     </header>
-    <!-- ----- Quick Features  -----  -->
+
     <main>
+      <!-- ------------------------------------
+             Quick Features
+     ------- ------------- ----------------- -->
       <section class="quick-feature container">
         <div class="quick-features">
           <div class="quick-features-teams">
@@ -63,8 +69,8 @@
           </div>
           <div class="quick-feature-info">
             <h1 class="quick-feature-title">
-              <span class="title-part1">Quick list</span> of Our
-              <span class="title-part2">Features</span>
+              <span>Quick list</span> of Our
+              <span>Features</span>
             </h1>
             <p class="primary-description">
               There are many variations of passages of Lorem Ipsum available,
@@ -75,7 +81,10 @@
           </div>
         </div>
       </section>
-      <!-- feature  -->
+      <!-- ------------------------------------
+             feature
+       ------- ------------- ----------------- -->
+
       <section class="feature container">
         <div class="feature-info">
           <div class="inner-info">
@@ -120,8 +129,8 @@
           </div>
           <div class="feature-thumbnail">
             <div class="feature-button">
-              <h3 class="feature-button-title">10+Year</h3>
-              <p class="feature-button-exprience">Experience</p>
+              <span class="feature-button-title">10+Year</span>
+              <p class="feature-button-experience">Experience</p>
             </div>
             <!-- <button class="primary-btn feature-button">
               10+Year Experience
@@ -129,10 +138,13 @@
           </div>
         </div>
       </section>
-      <!-- Facts -->
+      <!-- ------------------------------------
+             Facts
+       ------- ------------- ----------------- -->
+
       <section class="fact container">
         <div class="fact-info">
-          <h2 class="primary-title">Some Facts</h2>
+          <h2 class="fact-info-title">Some Facts</h2>
           <p class="primary-description">
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration.
@@ -145,23 +157,25 @@
             <h3>Awards Winnings</h3>
           </article>
           <article class="award">
-            <img src="images/icons/ribon.png" alt="" />
+            <img src="images/icons/customers.png" alt="" />
             <h1>54</h1>
             <h3>Awards Winnings</h3>
           </article>
           <article class="award">
-            <img src="images/icons/ribon.png" alt="" />
+            <img src="images/icons/projects.png" alt="" />
             <h1>54</h1>
             <h3>Awards Winnings</h3>
           </article>
           <article class="award">
-            <img src="images/icons/ribon.png" alt="" />
+            <img src="images/icons/email.png" alt="" />
             <h1>54</h1>
             <h3>Awards Winnings</h3>
           </article>
         </div>
       </section>
-      <!-- Sponspors -->
+      <!-- ------------------------------------
+             Sponsors
+       ------- ------------- ----------------- -->
       <section class="our-Sponsors container">
         <div class="sponsors-info">
           <h3 class="our-sponsors-title">Our Sponsors</h3>
@@ -188,8 +202,13 @@
           </div>
         </div>
       </section>
+      <!-- ------------------------------------
+             adisonal secton
+       ------- ------------- ----------------- -->
     </main>
-
+    <!-- ------------------------------------
+         footer 
+     ------ ------------- ----------------- -->
     <footer>
       <div class="footer container">
         <p class="footer-description">
@@ -197,6 +216,5 @@
         </p>
       </div>
     </footer>
-
   </body>
 </html>
