--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <h3 class="our-sponsors-title">Our Sponsors</h3>
           <p class="primary-description">
             There are many variations of passages of Lorem Ipsum available, but
-            the majority have suffered alteration.
+            the majority  suffered alteration.
           </p>
         </div>
         <div class="sponsors">
