--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <h3 class="our-sponsors-title">Our Sponsors</h3>
           <p class="primary-description">
             There are many variations of passages of Lorem Ipsum available, but
-            the majority  suffered alteration.
+            the majority suffered alteration.
           </p>
         </div>
         <div class="sponsors">
@@ -202,10 +202,76 @@
           </div>
         </div>
       </section>
-      <!-- ------------------------------------
-             adisonal secton
-       ------- ------------- ----------------- -->
     </main>
+
+    <!-- ------------------------------------
+             our-tem section 
+       ------- ------------- ----------------- -->
+
+    <section class="our-tem" id="textimolial">
+      <div class="meet-out-team">
+        <div class="team-info">
+          <h1 class="team-title">MEET OUR BEAUTIFUL TEAM</h1>
+          <p class="primary-description">
+            We are a small team of designers and developers, who help brands
+            with big ideas
+          </p>
+        </div>
+        <div class="temas">
+          <div class="team">
+            <img src="resources/img/tem-01.jpg" alt="df" />
+            <h2 class="team-name">ANNE HATHAWAY</h2>
+            <h4 class="team-occupation">CEO / Marketing Guru</h4>
+            <p class="primary-description">
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+              accusantium dolore
+            </p>
+            <div class="social-media">
+              <a href="#">
+                <li><i class="fa-brands fa-facebook-f"></i></li>
+              </a>
+              <a href="#">
+                <li><i class="fa-brands fa-twitter"></i></li>
+              </a>
+              <a href="#">
+                <li>
+                  <i class="fa-brands fa-instagram"></i>
+                </li>
+              </a>
+              <a href="#">
+                <li><i class="fa-brands fa-google-plus-g"></i></li>
+              </a>
+            </div>
+          </div>
+          <div class="team">
+            <img src="resources/img/tem-01.jpg" alt="df" />
+            <h2 class="team-name">ANNE HATHAWAY</h2>
+            <h4 class="team-occupation">CEO / Marketing Guru</h4>
+            <p class="primary-description">
+              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+              accusantium dolore
+            </p>
+            <div class="social-media">
+              <a href="#">
+                <li><i class="fa-brands fa-facebook-f"></i></li>
+              </a>
+              <a href="#">
+                <li><i class="fa-brands fa-twitter"></i></li>
+              </a>
+              <a href="#">
+                <li>
+                  <i class="fa-brands fa-instagram"></i>
+                </li>
+              </a>
+              <a href="#">
+                <li><i class="fa-brands fa-google-plus-g"></i></li>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- ------------------------------------
          footer 
      ------ ------------- ----------------- -->
