--- a/index.html
+++ b/index.html
@@ -207,22 +207,21 @@
     <!-- ------------------------------------
              our-tem section 
        ------- ------------- ----------------- -->
-
-    <section class="our-tem" id="textimolial">
-      <div class="meet-out-team">
+    <section class="our-tem">
+      <div class="meet-out-team container">
         <div class="team-info">
           <h1 class="team-title">MEET OUR BEAUTIFUL TEAM</h1>
-          <p class="primary-description">
+          <p class="primary-description team-description">
             We are a small team of designers and developers, who help brands
             with big ideas
           </p>
         </div>
-        <div class="temas">
+        <div class="teams">
           <div class="team">
-            <img src="resources/img/tem-01.jpg" alt="df" />
+            <img src="images/team/tem-01.jpg" alt="df" />
             <h2 class="team-name">ANNE HATHAWAY</h2>
             <h4 class="team-occupation">CEO / Marketing Guru</h4>
-            <p class="primary-description">
+            <p class="primary-description team-description">
               Sed ut perspiciatis unde omnis iste natus error sit voluptatem
               accusantium dolore
             </p>
@@ -244,12 +243,62 @@
             </div>
           </div>
           <div class="team">
-            <img src="resources/img/tem-01.jpg" alt="df" />
+            <img src="images/team/tem-03.jpg" alt="df" />
+            <h2 class="team-name">Motiur Rahman</h2>
+            <h4 class="team-occupation">SEO / Developer</h4>
+            <p class="primary-description team-description">
+              SEO developers are front-end web developers who specialize in
+              optimizing search engine
+            </p>
+            <div class="social-media">
+              <a href="#">
+                <li><i class="fa-brands fa-facebook-f"></i></li>
+              </a>
+              <a href="#">
+                <li><i class="fa-brands fa-twitter"></i></li>
+              </a>
+              <a href="#">
+                <li>
+                  <i class="fa-brands fa-instagram"></i>
+                </li>
+              </a>
+              <a href="#">
+                <li><i class="fa-brands fa-google-plus-g"></i></li>
+              </a>
+            </div>
+          </div>
+          <div class="team">
+            <img src="images/team/tem-04.jpg" alt="df" />
             <h2 class="team-name">ANNE HATHAWAY</h2>
-            <h4 class="team-occupation">CEO / Marketing Guru</h4>
-            <p class="primary-description">
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-              accusantium dolore
+            <h4 class="team-occupation">Creative Director</h4>
+            <p class="primary-description team-description">
+              Creative directors are the creative leads at advertising agencies
+              or in-house
+            </p>
+            <div class="social-media">
+              <a href="#">
+                <li><i class="fa-brands fa-facebook-f"></i></li>
+              </a>
+              <a href="#">
+                <li><i class="fa-brands fa-twitter"></i></li>
+              </a>
+              <a href="#">
+                <li>
+                  <i class="fa-brands fa-instagram"></i>
+                </li>
+              </a>
+              <a href="#">
+                <li><i class="fa-brands fa-google-plus-g"></i></li>
+              </a>
+            </div>
+          </div>
+          <div class="team">
+            <img src="images/team/tem-05.png" alt="df" />
+            <h2 class="team-name">Rubel Hossen</h2>
+            <h4 class="team-occupation">Lead Designer</h4>
+            <p class="primary-description team-description">
+              The Lead Designer manages all aspects of the design process, from
+              research and ideation
             </p>
             <div class="social-media">
               <a href="#">
